loggin system and notification

--- a/imguiChat/imguiChat.vcxproj.filters
+++ b/imguiChat/imguiChat.vcxproj.filters
@@ -66,4 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="C:\Users\please\Downloads\notif.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+  </ItemGroup>
 </Project>
